--- a/contents/H_P_Lovecraft/_about/book.toml
+++ b/contents/H_P_Lovecraft/_about/book.toml
@@ -1,5 +1,5 @@
 [book]
-authors = ["OpenBunko and contributors"]
+authors = ["OpenBunko contributors"]
 language = "ja"
 multilingual = false
 src = "src"
