--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,29 +6,41 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
 
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install mdBook
         run: cargo install mdbook
 
       - name: Build indexbook
         run: |
-          mdbook build -d ../docs indexbook
+          mdbook build -d ../book indexbook
 
       - name: Build all contents/*/* books
         run: |
           find content -type f -name "book.toml" | while read bookfile; do
-            echo "📘 Building $(dirname "$bookfile")"
-            mdbook build "$(dirname "$bookfile")"
+            bookdir=$(dirname "$bookfile")
+            output_dir="../../book/$bookdir"
+            echo "📘 Building $bookdir to $output_dir"
+            mdbook build -d "$output_dir" "$bookdir"
           done
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          path: 'book'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
