--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build all contents/*/* books
         run: |
-          find content -type f -name "book.toml" | while read bookfile; do
+          find contents -type f -name "book.toml" | while read bookfile; do
             bookdir=$(dirname "$bookfile")
             output_dir="../../book/$bookdir"
             echo "📘 Building $bookdir to $output_dir"
